# mdk-nvjp2k

./: CMakeLists.txt  nvJp2kDecoder.cpp
.github/workflows/: main.yml
